# pyusel-dispest

./: .gitignore  README.md  example_data.h5  pyproject.toml  req_depends.txt  requirements.txt  setup.py  showitoff.ipynb
development/: fasterxcor.ipynb
dispest/: __cpu_engines__.py  __init__.py  __xcorr__.c  __xcorr__.cu  __xcorr__.h  demod.py  dispest.py  exceptions.py  kasai.py  modulate.py  radon.py  sws.py  swsest.py  xcorr.py
dispest/nxcorr/: __driver__.py  __gpu_engine.py  __gpu_engines__.py  __init__.py  driver.py
examples/: demodulation.ipynb  example_data.h5  gpu_xcorr.ipynb  make_example_data.py  partmotion.ipynb  swsestimation.ipynb
