[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyusel-dispest"
version = "0.0.1"
authors = [
  { name="Wren Wightman", email="wren.wightman@duke.edu" },
]
description = "Displacement estimation tools for use in ultrasound elasticity imaging"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wewightman/dispest"